--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
     <link href="./assets/css/style.css" rel="stylesheet">
     <!-- You can change the theme colors from here -->
     <link href="./assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
+    
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 <body class="fix-header card-no-border fix-sidebar">
     <!-- ============================================================== -->
