Add ng zone for login google, shared sidebar

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,8 @@
     <!-- You can change the theme colors from here -->
     <link href="./assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
     
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <!-- <script src="https://accounts.google.com/gsi/client" async defer></script> -->
+    <script src="https://accounts.google.com/gsi/client" ></script>
 </head>
 <body class="fix-header card-no-border fix-sidebar">
     <!-- ============================================================== -->
